# vietnormalizer

./: MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  setup.py  test_normalizer.py
docs/: LIBRARY_STRUCTURE.md  publish-to-pypi.md
scripts/: build.sh  publish-to-pypi.sh
vietnormalizer/: __init__.py  normalizer.py
