[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnormalizer-thuan"
version = "0.3.0"
description = "A Python library for normalizing Vietnamese text for TTS and NLP applications"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Dinh Thuan"},
]
keywords = ["vietnamese", "text-normalization", "nlp", "tts", "text-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/iamdinhthuan/vietnormalizer"
Repository = "https://github.com/iamdinhthuan/vietnormalizer"
Issues = "https://github.com/iamdinhthuan/vietnormalizer/issues"

[tool.setuptools]
packages = ["vietnormalizer", "vietnormalizer.data"]

[tool.setuptools.package-data]
vietnormalizer = ["data/*.csv"]
